duck/test/fail/contravariant_overload.duck
f :: (a -> Int) -> Int
f g = g 0

_ = f \x -> x
